fix(web): update scrollbar styles

--- a/actor-sdk/sdk-web/src/styles/sidebar.scss
+++ b/actor-sdk/sdk-web/src/styles/sidebar.scss
@@ -287,24 +287,16 @@
         color: $dark-sky-blue;
       }
     }
-    &__scroll-container {
-      position: relative;
-      height: 100%;
-      width: 100%;
-      left: auto;
-      top: auto;
-      right: auto;
-      bottom: auto;
-      .scroll-wrapper {
-        .ss-scroll {
-          right: -2px;
-          width: 4px;
-          opacity: 1 !important;
-          &:hover,
-          &:active {
-            width: 8px;
-            right: -4px;
-          }
+
+    .scroll-wrapper {
+      .ss-scroll {
+        right: -2px;
+        width: 4px;
+        opacity: 1 !important;
+        &:hover,
+        &:active {
+          width: 8px;
+          right: -4px;
         }
       }
     }
